# Borked3DS

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.ci/: android.sh  ios.sh  linux-clang-20.04.sh  linux-clang-22.04.sh  linux-clang-24.04.sh  linux-clang.sh  linux-gcc-24.04.sh  linux-gcc.sh  linux.sh  macos-universal.sh  macos.sh  pack.sh  source.sh  windows-clang.sh  windows-gcc.sh  windows-msvc.sh  windows-msys2.sh  windows.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci-merge.js  clear-cache.yml  format.yml  update-actions.yml
CMakeModules/: BundleTarget.cmake  DownloadExternals.cmake  GenerateBuildInfo.cmake
hooks/: pre-commit
src/: CMakeLists.txt
src/android/: build.gradle.kts  code-style-java.xml  gradle.properties  settings.gradle.kts
src/android/app/: build.gradle.kts  proguard-rules.pro
src/android/app/src/main/jni/: CMakeLists.txt  config.cpp  config.h  default_ini.h  game_info.cpp  id_cache.cpp  id_cache.h  input_manager.cpp  input_manager.h  multiplayer.cpp  multiplayer.h  native.cpp  native_log.cpp  ndk_motion.cpp  ndk_motion.h  system_save_game.cpp  util.cpp  util.h
src/android/app/src/main/jni/android_common/: android_common.cpp  android_common.h
src/android/app/src/main/jni/applets/: mii_selector.cpp  mii_selector.h  swkbd.cpp  swkbd.h
src/android/app/src/main/jni/camera/: ndk_camera.cpp  ndk_camera.h  still_image_camera.cpp  still_image_camera.h
src/android/app/src/main/jni/cheats/: cheat.cpp  cheat.h  cheat_engine.cpp
src/android/app/src/main/jni/emu_window/: emu_window.cpp  emu_window.h  emu_window_gl.cpp  emu_window_gl.h  emu_window_vk.cpp  emu_window_vk.h
src/audio_core/: CMakeLists.txt  audio_types.h  codec.cpp  codec.h  cubeb_input.cpp  cubeb_input.h  cubeb_sink.cpp  cubeb_sink.h  dsp_interface.cpp  dsp_interface.h  input.h  input_details.cpp  input_details.h  interpolate.cpp  interpolate.h  null_input.h  null_sink.h  oboe_sink.cpp  openal_input.cpp  openal_input.h  openal_sink.cpp  openal_sink.h  sdl2_sink.cpp  sdl2_sink.h  sink.h  sink_details.cpp  sink_details.h  static_input.cpp  static_input.h  time_stretch.cpp  time_stretch.h
src/audio_core/hle/: aac_decoder.cpp  aac_decoder.h  common.h  decoder.cpp  decoder.h  filter.cpp  filter.h  hle.cpp  hle.h  mixers.cpp  mixers.h  shared_memory.h  source.cpp  source.h
src/audio_core/lle/: lle.cpp  lle.h
src/borked3ds/: CMakeLists.txt  borked3ds.cpp  borked3ds.rc  config.cpp  config.h  default_ini.h
src/borked3ds/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_sw.cpp  emu_window_sdl2_sw.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h
src/borked3ds_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bootmanager.cpp  bootmanager.h  borked3ds-qt.rc  compatdb.cpp  compatdb.h  compatdb.ui  compatibility_list.cpp  discord.h  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  hotkeys.h  loading_screen.cpp  loading_screen.h  loading_screen.ui  main.cpp  main.h  main.ui  play_time_manager.cpp  play_time_manager.h  qt_image_interface.cpp  qt_image_interface.h  uisettings.cpp  uisettings.h
src/borked3ds_qt/applets/: mii_selector.cpp  mii_selector.h  swkbd.cpp  swkbd.h
src/borked3ds_qt/camera/: camera_util.cpp  camera_util.h  qt_camera_base.cpp  qt_camera_base.h  qt_multimedia_camera.cpp  qt_multimedia_camera.h  still_image_camera.cpp  still_image_camera.h
src/citra/: CMakeLists.txt  citra.cpp  config.cpp  default_ini.h
src/citra_qt/: CMakeLists.txt  aboutdialog.ui  discord_impl.cpp  game_list.cpp  game_list.h  game_list_p.h  hotkeys.cpp  main.cpp  main.h  main.ui  uisettings.h
src/common/: CMakeLists.txt  android_storage.cpp  android_storage.h  announce_multiplayer_room.h  apple_authorization.cpp  apple_authorization.h  arch.h  archives.h  assert.h  color.h  common_funcs.h  common_paths.h  common_precompiled_headers.h  construct.h  detached_tasks.cpp  detached_tasks.h  error.cpp  error.h  file_util.cpp  file_util.h  hash.h  math_util.h  memory_ref.cpp  memory_ref.h  param_package.cpp  param_package.h  profiling.h  quaternion.h  ring_buffer.h  scm_rev.cpp.in  scm_rev.h  scope_exit.h  settings.cpp  settings.h  string_literal.h  string_util.cpp  string_util.h  texture.cpp  texture.h  thread.cpp  (+6 more)
src/core/: 3ds.h  CMakeLists.txt  core.cpp  core.h  core_timing.cpp  core_timing.h  global.h  memory.cpp  memory.h  movie.cpp  movie.h  nus_download.cpp  nus_download.h  perf_stats.cpp  perf_stats.h  precompiled_headers.h  savestate.cpp  savestate.h  savestate_data.h  system_titles.cpp  system_titles.h
src/dedicated_room/: CMakeLists.txt  borked3ds-room.cpp
src/input_common/: CMakeLists.txt  analog_from_button.cpp  analog_from_button.h  keyboard.cpp  keyboard.h  main.cpp  main.h  motion_emu.cpp  motion_emu.h  touch_from_button.cpp  touch_from_button.h
src/installer/: broken3ds.nsi
src/network/: CMakeLists.txt  announce_multiplayer_session.cpp  announce_multiplayer_session.h  network.cpp  network.h  network_settings.cpp  network_settings.h  packet.cpp  packet.h  room.cpp  room.h  room_member.cpp  room_member.h  socket_manager.cpp  socket_manager.h  verify_user.cpp  verify_user.h
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  gpu.cpp  gpu.h  gpu_debugger.h  pica_types.h  rasterizer_accelerated.cpp  rasterizer_accelerated.h  rasterizer_interface.h  renderer_base.cpp  renderer_base.h  utils.h  video_core.cpp  video_core.h
src/web_service/: CMakeLists.txt  announce_room_json.cpp  announce_room_json.h  verify_login.cpp  verify_login.h  verify_user_jwt.cpp  verify_user_jwt.h  web_backend.cpp  web_backend.h
(+1187 files in other folders)
